[package]
name = "cargo-test-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
cargo = "0.75.1"
markdown = "0.3.0"
tempfile = "3.8.1"
log = "0.4.20"
env_logger = "0.10.1"
